examples/test/testpolicy19964.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19964
  namespace: namespace381
spec:
  podSelector:
    matchLabels:
      key31: value19
      key11: value1
      key32: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value22
          key19: value49
          key31: value8
      podSelector:
        matchLabels:
          key36: value49
          key24: value11
